@@ -1,3 +1,5 @@
+* Remove support for `:selected` as CSS3 draft spec merges it with `:checked`. [Alex Russell, jddalton]
+
 * Improved `:focus` pseudo's resolution by adding `A` and `AREA` elements as focusable. [Diego Perini, jddalton]
 
 * Add `OPTIMIZE_CLASS_FIRST` flag so IE8 will optimize by className before tagName in select_regular(). [jddalton]
